--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1108,9 +1108,9 @@ video {
             margin-bottom: 2.5%;
         }
 
-        .product1 {
-            display: none;
-        }
+        // .product1 {
+        //     display: none;
+        // }
 
         .product {
             width: 100%;
@@ -1341,210 +1341,36 @@ video {
     }
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:540px) {
     .products {
     
         .inner {
+    
+          
+    
             .product {
-                display: none;
-            }
-
-            .product1 {
-                display: block;
-                width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-                border-radius: 16px;
-                margin-top: 5%;
+                flex-direction: column;
     
                 .Standard{
                     background: #213654;
                     border-radius: 16px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    flex-direction: column;
-                    box-shadow: 0px 8px 32px rgba(59, 59, 59, 0.04) !important;
-                    width: 80%;
+                    width: 100%;
                     padding: 5%;
-                    border-radius: 16px;
-                    margin-left: 50%;
-                    margin-right: 50%;
-                    transform: translate(-50%);
-                    height: 400px;
-                    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-                    .icon {
-                        color: #F4BC4D;
-                    }
-    
-                    .starred {
-                        display: block;
-                        margin-bottom: 0%;
-                        margin-top: 2%;
-                        font-size: 0.75rem;
-                    }
-    
-                    h1 {
-                        font-size: 2rem;
-                    }
-                    h3 {
-                        font-size: 1.2rem;
-                    }
-                    p {
-                        font-size: 0.75rem;
-                    }
-    
-                    h1, h3 , p {
-                        color:  #fff;
-                    }
-    
-                    .snip {
-                        display: block;
-                        width: 100%;
-                        margin-bottom: 5%;
-                        margin-top: 5%;
-                    }
-    
-                    div {
-                        margin-bottom: 5%;
-                        width: 90%;
-                        p {
-                            text-align: left;
-                            color: #fff;
-                            margin-bottom: 5%;
-    
-                            .con {
-                                color: #fff;
-                            }
-                        }
-                    }
-    
-                    a {
-                        font-family: "Poppins", sans-serif  ;
-                        font-weight: normal;
-                        font-size: 1rem;
-                        line-height: 30px;
-                        text-align: center;
-                        background: #fff;
-                        color: #213654;
-                        display: block;
-                        width: 100%;
-                        text-decoration: none;
-                        padding: 2%;
-                        margin-top: 0%;
-                        border-radius: 12px;
-                        margin-bottom: 5%;
-                        &:hover {
-                            border: 1px solid #fff;
-                            background: none;
-                            color: #fff;
-                        }
-                    }
+                    margin-top: 5%;
+                    margin-bottom: 5%;
     
                 }
     
                 .Basic, .Enterprise {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    flex-direction: column;
-                    box-shadow: 0px 8px 32px rgba(59, 59, 59, 0.04) !important;
-                    width: 80%;
-                    padding: 5%;
-                    border-radius: 16px;
-                    background: #fff;
-                    margin-left: 50%;
-                    margin-right: 50%;
-                    transform: translate(-50%);
-                    height: 400px;
-                    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    
-                    .starred {
-                        display: none;
-                    }
-                    .icon {
-                        color: #F4BC4D;
-                    }
-                    h1 {
-                        font-size: 2rem;
-                    }
-                    h3 {
-                        font-size: 1.2rem;
-                    }
-                    p {
-                        font-size: 0.75rem;
-                    }
-    
-                    h1, h3, p {
-                        text-align: center;
-                        margin-bottom: 3%;
-                    }
-    
-                    .snip {
-                        display: block;
-                        width: 100%;
-                        margin-bottom: 5%;
-                        margin-top: 5%;
-                    }
-    
-                    div {
-                        margin-bottom: 5%;
-                        width: 90%;
-                        p {
-                            text-align: left;
-                            color: #6E6E6E;
-                            margin-bottom: 3%;
-                            .con {
-                                color: #213654;
-                            }
-                        }
-                    }
-    
-                    a {
-                        font-family: "Poppins", sans-serif  ;
-                        font-weight: normal;
-                        font-size: 1rem;
-                        line-height: 30px;
-                        text-align: center;
-                        background: #213654;
-                        color: #FFFFFF;
-                        display: block;
-                        width: 100%;
-                        text-decoration: none;
-                        padding: 2%;
-                        margin-top: 5%;
-                        border-radius: 12px;
-                        margin-bottom: 5%;
-                        &:hover {
-                            border: 1px solid #213654;
-                            background: none;
-                            color: #213654;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-
-@media screen and (max-width:540px) {
-    .products {
-        .inner {
-            .product1 {
-                .Basic, .Enterprise, .Standard {
                     width: 100%;
-                    // height: 450px;
-
-                    // a {
-                    //     margin-top: 0%;
-                    //     margin-bottom: 0%;
-                    // }
+                    padding: 5%;
                 }
             }
         }
     }
 }
+
+
 
 
 .testimonies {
